--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>este es un blog</title>
+    <title>este es un blog de prueba</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
