--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-    <title>este es un blog de prueba</title>
+    <title>este es un blog</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>cabecera</h1>
+            <h1>blog</h1>
         </div>
         <div id="post">
             <h1>este es un blog</h1>
