cambios con stash

--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
             <h1>este es un blog</h1>
             <p>esto es para una practica de git</p>
             <p>esto seria un cambio que no se veria en la cabecera para probar lo cambios en las branch</p>
+            <p>esto es para una practica de git</p>
         </div>
     </div>
 </body>
